--- a/code/src/index.css
+++ b/code/src/index.css
@@ -128,18 +128,30 @@ h2 {
 
 select {
   margin: 30px 30px;
-  width: 300px;
+  width: 200px;
   height: 40px;
   font-size: 16px;
 }
 
-/* .nav-bar-link:hover {
-  opacity: 1;
-  color: #ffffff;
-  background: black;
-  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px, goldenrod 0px 0px 20px, goldenrod 0px 0px 30px, orange 0px 0px 40px, orange 0px 0px 50px,
-    orange 0px 0px 75px;
-} */
+.options-pick {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.or {
+  display: none;
+}
+
+.extra-random-button-style {
+  width: fit-content;
+  height: 40px;
+  font-size: 16px;
+  padding: 0px 30px;
+  margin-left: -18px;
+  margin-right: 18px;
+}
 
 @media (min-width: 768px) {
   .grid {
@@ -170,5 +182,19 @@ select {
     width: 400px;
     height: 50px;
     font-size: 18px;
+  }
+  .or {
+    display: flex;
+    font-size: 18px;
+    font-weight: bolder;
+    color: goldenrod;
+    margin-right: 22px;
+  }
+  .extra-random-button-style {
+    width: fit-content;
+    height: 50px;
+    font-size: 18px;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
