cleaning out few comments

--- a/code/src/components/MovieDetails.css
+++ b/code/src/components/MovieDetails.css
@@ -10,16 +10,8 @@
 
 .gradient {
   background: rgb(0, 0, 0);
-  background: linear-gradient(
-    0deg,
-    rgba(0, 0, 0, 1) 0%,
-    rgba(255, 255, 255, 1) 78%
-  );
-  background: linear-gradient(
-    0deg,
-    rgb(0 0 0 / 70%) 0%,
-    rgb(255 255 255 / 36%) 78%
-  );
+  background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 1) 78%);
+  background: linear-gradient(0deg, rgb(0 0 0 / 70%) 0%, rgb(255 255 255 / 36%) 78%);
 }
 
 .movie-wrapper {
@@ -30,12 +22,7 @@
 
 .movie-wrapper::before {
   content: "";
-  background: linear-gradient(
-    0deg,
-    rgb(0 0 0 / 100%) 0%,
-    rgb(0 0 0 / 70%) 10%,
-    rgb(255 255 255 / 36%) 78%
-  );
+  background: linear-gradient(0deg, rgb(0 0 0 / 100%) 0%, rgb(0 0 0 / 70%) 10%, rgb(255 255 255 / 36%) 78%);
   position: absolute;
   top: 0px;
   left: 0;
@@ -112,7 +99,6 @@ p {
   margin-bottom: 0;
 }
 
-/* https://stackoverflow.com/questions/40549227/how-to-create-a-pop-up-animation-with-a-modal-using-css/40549695 */
 @keyframes popup {
   0% {
     transform: scale(1);
@@ -161,12 +147,7 @@ p {
   .movie-wrapper::before {
     content: "";
     position: absolute;
-    background: linear-gradient(
-      0deg,
-      rgb(0 0 0 / 100%) 0%,
-      rgb(0 0 0) 10%,
-      rgb(255 255 255 / 38%) 100%
-    );
+    background: linear-gradient(0deg, rgb(0 0 0 / 100%) 0%, rgb(0 0 0) 10%, rgb(255 255 255 / 38%) 100%);
     top: 0;
     left: 0;
     right: 0;
